--- a/website/package.json
+++ b/website/package.json
@@ -4,6 +4,7 @@
     "start": "docusaurus-start",
     "build": "docusaurus-build",
     "publish-gh-pages": "docusaurus-publish",
+    "publish-gh": "GIT_USER=ysyfff CURRENT_BRANCH=master USE_SSH=true yarn run publish-gh-pages",
     "write-translations": "docusaurus-write-translations",
     "version": "docusaurus-version",
     "rename-version": "docusaurus-rename-version"
